--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "Acceptance and Integration Testing for EcoBytes App",
   "main": "index.js",
   "scripts": {
-    "test": "playwright test"
+    "clean": "rimraf ./allure-results ./allure-report",
+    "test": "playwright test",
+    "test:debug": "playwright test --debug",
+    "test:ui": "playwright test --ui",
+    "test:smoke": " playwright test --grep @smoke",
+    "allure:report": " allure generate allure-results"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.24"
+    "@types/node": "^20.11.24",
+    "allure-commandline": "^2.27.0",
+    "allure-playwright": "^2.13.0",
+    "rimraf": "^5.0.5"
   }
 }
