--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "1.0.0",
   "description": "Acceptance and Integration Testing for EcoBytes App",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "clean": "rimraf ./allure-results ./allure-report",
     "test": "playwright test",
     "test:debug": "playwright test --debug",
     "test:ui": "playwright test --ui",
     "test:smoke": " playwright test --grep @smoke",
-    "allure:report": " allure generate allure-results"
+    "allure:report": " allure generate allure-results",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.42.1",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.11.24",
     "allure-commandline": "^2.27.0",
     "allure-playwright": "^2.13.0",
-    "rimraf": "^5.0.5"
+    "eslint": "^8.57.0",
+    "eslint-plugin-playwright": "^1.5.2",
+    "rimraf": "^5.0.5",
+    "typescript": "^5.4.2",
+    "typescript-eslint": "^7.1.1"
   }
 }
