--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "Acceptance and Integration Testing for EcoBytes App",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "clean": "rimraf ./allure-results ./allure-report",
-    "test": "playwright test",
-    "test:debug": "playwright test --debug",
-    "test:ui": "playwright test --ui",
-    "test:smoke": " playwright test --grep @smoke",
-    "allure:report": " allure generate allure-results",
-    "lint": "eslint ."
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@playwright/test": "^1.42.1",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.11.24",
-    "allure-commandline": "^2.27.0",
-    "allure-playwright": "^2.13.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-playwright": "^1.5.2",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.4.2",
-    "typescript-eslint": "^7.1.1"
-  }
+    "name": "test",
+    "version": "1.0.0",
+    "description": "Acceptance and Integration Testing for EcoBytes App",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "clean": "rimraf ./allure-results ./allure-report",
+        "test": "playwright test",
+        "test:debug": "playwright test --debug",
+        "test:ui": "playwright test --ui",
+        "test:smoke": " playwright test --grep @smoke",
+        "allure:report": " allure generate allure-results",
+        "lint": "eslint .",
+        "format": "prettier --write \"**/*.+(js|ts|cjs|json|mjs)\"",
+        "check-format": "prettier --check \"**/*.+(js|ts|cjs|json|mjs)\""
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@playwright/test": "^1.42.1",
+        "@types/eslint__js": "^8.42.3",
+        "@types/node": "^20.11.24",
+        "allure-commandline": "^2.27.0",
+        "allure-playwright": "^2.13.0",
+        "eslint": "^8.57.0",
+        "eslint-plugin-playwright": "^1.5.2",
+        "prettier": "3.2.5",
+        "rimraf": "^5.0.5",
+        "typescript": "^5.3.3",
+        "typescript-eslint": "^7.1.1"
+    }
 }
