--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "Acceptance and Integration Testing for EcoBytes App",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "clean": "rm -R -f allure-report/* && rm -R -f allure-results/*",
-    "test": "playwright test",
-    "test:debug": "playwright test --debug",
-    "test:ui": "playwright test --ui",
-    "test:smoke": " playwright test --grep @smoke",
-    "allure:report": " allure generate allure-results",
-    "lint": "eslint .",
-    "format": "prettier --write \"**/*.+(js|ts|cjs|json|mjs)\"",
-    "check-format": "prettier --check \"**/*.+(js|ts|cjs|json|mjs)\"",
-    "prepare": "husky"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@playwright/test": "^1.42.1",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.11.24",
-    "allure-commandline": "^2.27.0",
-    "allure-playwright": "^2.13.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-playwright": "^1.5.2",
-    "husky": "^9.0.11",
-    "prettier": "3.2.5",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.3.3",
-    "typescript-eslint": "^7.1.1"
-  }
+    "name": "test",
+    "version": "1.0.0",
+    "description": "Acceptance and Integration Testing for EcoBytes App",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "clean": "rm -R -f allure-report/* && rm -R -f allure-results/*",
+        "test": "playwright test",
+        "test:debug": "playwright test --debug",
+        "test:ui": "playwright test --ui",
+        "test:smoke": " playwright test --grep @smoke",
+        "allure:report": " allure generate allure-results",
+        "lint": "eslint .",
+        "format": "prettier --write \"**/*.+(js|ts|cjs|json|mjs)\"",
+        "check-format": "prettier --check \"**/*.+(js|ts|cjs|json|mjs)\"",
+        "validate": "npm run lint && npm run check-format",
+        "prepare": "husky"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@playwright/test": "^1.42.1",
+        "@types/eslint__js": "^8.42.3",
+        "@types/node": "^20.11.24",
+        "allure-commandline": "^2.27.0",
+        "allure-playwright": "^2.13.0",
+        "eslint": "^8.57.0",
+        "eslint-plugin-playwright": "^1.5.2",
+        "husky": "^9.0.11",
+        "prettier": "3.2.5",
+        "rimraf": "^5.0.5",
+        "typescript": "^5.3.3",
+        "typescript-eslint": "^7.1.1"
+    }
 }
