--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
         "rimraf": "^5.0.5",
         "typescript": "^5.3.3",
         "typescript-eslint": "^7.1.1"
+    },
+    "dependencies": {
+        "dotenv": "^16.4.5"
     }
 }
